# jamf_api_client

./: .gitignore  README.md  getting_started.py  logger_filename_var  pyproject.toml
core/: advancedcomputersearches.py  buildings.py  categories.py  computerextensionattributes.py  computergroups.py  computerreports.py  computers.py  delete_trr_jamf.py  departments.py  diskencryptionconfigurations.py  distributionpoints.py  dockitems.py  get_trr_jamf.py  ldapservers.py  licensedsoftware.py  macapplications.py  mobiledeviceapplications.py  mobiledevicegroups.py  networksegments.py  osxconfigurationprofiles.py  packages.py  patches.py  patchinternalsources.py  post_trr_jamf.py  printers.py  put_trr_jamf.py  restrictedsoftware.py  scripts.py  trr_jamf.py  usergroups.py  users.py
core/get_jamf/: accounts.py  activationcode.py  advancedcomputersearches.py  advancedmobiledevicesearches.py  advancedusersearches.py  allowedfileextensions.py  buildings.py  byoprofiles.py  categories.py  classes.py  commandflush.py  computerapplications.py  computerapplicationusage.py  computercheckin.py  computercommands.py  computerconfigurations.py  computerextensionattributes.py  computergroups.py  computerhardwaresoftwarereports.py  computerhistory.py  computerinventorycollection.py  computerinvitations.py  computermanagement.py  computerreports.py  computers.py  departments.py  directorybindings.py  diskencryptionconfigurations.py  distributionpoints.py  dockitems.py  ebooks.py  (+53 more)
jamf_analyzation/: creative_ruby_version.py  users_admin_rights.py
src/: trr_jamf.py
trr_jamf/: trr_jamf.py
(+67 files in other folders)
